--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.18.2",
     "axios": "^1.13.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "framer-motion": "^10.16.2",
     "jotai": "^2.3.0",
     "jotai-tanstack-query": "^0.11.0",
