--- a/package.json
+++ b/package.json
@@ -4,24 +4,30 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.0",
+    "@darshanpatel2608/human-body-react": "^1.2.9",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@react-three/drei": "9.102.6",
+    "@react-three/fiber": "8.15.19",
     "@tanstack/react-query": "^4",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "express": "^4.18.2",
     "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "framer-motion": "^10.16.2",
     "jotai": "^2.3.0",
     "jotai-tanstack-query": "^0.11.0",
     "react": "^18.3.1",
+    "react-body-highlighter": "^2.0.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.5",
     "react-scripts": "5.0.1",
+    "reactjs-human-body": "^0.0.8",
+    "three": "0.162.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
